responsive css updated in awared web app

--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
@@ -7,9 +7,25 @@
 html,body{
     height: 100%;
     width: 100%;
-    /* overflow-x: hidden */
-    background-color: red
-};
+    
+}
+
+body{
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+
+body::-webkit-scrollbar{
+  display: block;
+  width: 1px;
+  background-color:transparent;
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color:transparent;
+  border-radius: 50px;
+}
 
 .header-nav{
     color: #fff;
