--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
@@ -1,5 +1,10 @@
 /* menubar style */
 
+body{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 #svg1{
     color: #fff;
     /* margin: 0px 10px; */
