--- a/backend/pratise backend/practice project pin/pin/views/groupOrder.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/groupOrder.ejs
@@ -111,7 +111,7 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-twitter"></i>
     </div>
-        <h5>© 2024 Two Good Co
+        <h5 class="good">© 2024 Two Good Co
             <span>Powered by FoodStorm</span></h5>
     </div>
 </footer>
