--- a/backend/pratise backend/practice project pin/pin/views/lunch.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/lunch.ejs
@@ -78,14 +78,17 @@
 
 <div class="product-page lunch-product">
     <div class="card1">
+        <div class="Atag">
         <a style="text-decoration: none;color: #111;" href="/morningProduct"><h1>Morning</h1></a>
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1 style="font-weight: 800;">Lunch</h1></a>
         <a  style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon"><h1>Afternoon</h1></a>
         <a  style="text-decoration: none; font-weight:800;color: #111;" href="/evening"><h1>Evening</h1></a>
+    </div>
+    <div class="nonAtag">
         <h1>Individually Packeaged
             Meals</h1>
         <h1>Bio Disponsable</h1>
-
+    </div>
     </div>
     <div class="card2">
         
@@ -115,7 +118,7 @@
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
         </div>
-        <h5>© 2024 Two Good Co
+        <h5 class="good">© 2024 Two Good Co
             <span>Powered by FoodStorm</span>
         </h5>
     </div>
