--- a/backend/pratise backend/practice project pin/pin/views/morningProduct.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/morningProduct.ejs
@@ -65,7 +65,7 @@
         <a href="/">Home</a>
         <a href="/bespoke">Bespoke Event</a>
         <a id="group" href="/group-order"><i class="fa-solid fa-users-line"></i>group Order</a>
-        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="/"><i class="fa-solid fa-magnifying-glass"></i></a>
         <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
 
     </div>
@@ -79,13 +79,16 @@
 
 <div class="product-page">
     <div class="card1">
+        <div class="Atag">
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/morningProduct"><h1 style="font-weight: 800;">Morning</h1></a>
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1>Lunch</h1></a>
         <a  style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon"><h1>Afternoon</h1></a>
         <a  style="text-decoration: none; font-weight:800;color: #111;" href="/evining"><h1>Evening</h1></a>
-        <h1>Individually Packeaged
-            Meals</h1>
+    </div>
+    <div class="nonAtag">
+        <h1>Individually Packeaged Meals</h1>
         <h1>Bio Disponsable</h1>
+    </div>
 
     </div>
     <div class="card2">
@@ -116,7 +119,7 @@
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
         </div>
-        <h5>© 2024 Two Good Co
+        <h5 class="good">© 2024 Two Good Co
             <span>Powered by FoodStorm</span>
         </h5>
     </div>
