--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
@@ -9,6 +9,17 @@ body{
     overflow-x: hidden;
 }
 
+body::-webkit-scrollbar{
+    display: block;
+    width: 7px;
+    background-color: #fff;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color:#827f7f;
+    border-radius: 50px;
+}
+
 h4{
     width: 100%;
     text-align: center;
@@ -240,4 +251,46 @@ footer .card3 h5{
     justify-content: space-between;
     font-size: 20px;
 
+}
+
+
+
+
+@media (max-width:600px) {
+
+
+    .navbar .part2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .navbar .part2 a{
+        font-size: 3.5vw;
+        /* background-color: rebeccapurple; */
+    }
+
+    footer h5{
+        font-size: 2.5vw;
+    }
+
+    footer .card3 .icone{
+        margin-right: 15px;
+    }
+
+    footer .card3 .icone i{
+        font-size: 2.5vw;
+        /* background-color: red; */
+    }
+
+    footer .card3 .good{
+        font-size: 2.5vw;
+    }
+
+    footer .card3 h5 span{
+        font-size: 2.5vw;
+    }
+
+    
 }
