--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/group.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/group.css
@@ -9,6 +9,18 @@ body{
     overflow-x: hidden;
 }
 
+
+body::-webkit-scrollbar{
+    display: block;
+    width: 7px;
+    background-color: #fff;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color:#827f7f;
+    border-radius: 50px;
+}
+
 h4{
     width: 100%;
     text-align: center;
@@ -139,9 +151,11 @@ h4{
     text-align: center;
     padding: 155px 0px;
     background-color: #1111117e;
+    /* background-color: red; */
     color: #fff;
     font-size: 2vw;
     border-radius: 10px;
+
     
 
 
@@ -240,4 +254,49 @@ footer .card3 h5{
     justify-content: space-between;
     font-size: 20px;
 
+}
+
+
+
+@media (max-width:600px) {
+    .hidden{
+        /* background-color: red; */
+        height: 270vh;
+    }
+
+
+    .navbar .part2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .navbar .part2 a{
+        font-size: 3.5vw;
+        /* background-color: rebeccapurple; */
+    }
+
+    footer h5{
+        font-size: 2.5vw;
+    }
+
+    footer .card3 .icone{
+        margin-right: 15px;
+    }
+
+    footer .card3 .icone i{
+        font-size: 2.5vw;
+        /* background-color: red; */
+    }
+
+    footer .card3 .good{
+        font-size: 2.5vw;
+    }
+
+    footer .card3 h5 span{
+        font-size: 2.5vw;
+    }
+
+    
 }
