updated responsive formating in awared web

--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/about.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/about.css
@@ -134,6 +134,10 @@ html,body{
     font-size: 1vw;
 }
 
+.page3 .card3 span{
+    font-size: 1vw;
+
+}
 .page4{
     min-height: 100vh;
     width: 100%;
@@ -201,10 +205,15 @@ html,body{
 
 
 
+.page5.endpage{
+    padding-top: 200px;
+  }
+
 
 .page5.endpage h1{
     font-size: 5vh;
   }
+
   
   .page5 i{
     font-size: 4vh;
@@ -293,5 +302,166 @@ html,body{
   .page6-part2 .GRAYSCALE{ 
     color: #8d8888;
     font-size: 15px;
+  }
+
+
+  @media (max-width:600px) {
+
+    .page1{
+        display: flex;
+        align-items: start;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    .page1 h1{
+        font-size: 15vw;
+        word-spacing: 20px;
+        letter-spacing: 0px;
+    }
+
+    .page1 .card{
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        flex-direction: column;
+        width: 100%;
+        font-size: 6vw;
+        padding-top: 20px;
+    }
+
+    .page1 .card p{
+        font-size: 4.5vw;
+        width: 100%;
+        text-align: justify;
+        word-spacing: 0px;
+        padding-top: 10px;
+    }
+
+    .page1 img{
+        margin-top: 5px;
+        height: 90vh;
+        width: 100%;
+    }
+
+    .page1 .headbtn{
+        font-size: 10vw;
+        padding: 25px 0px;
+        line-height: 0px;
+        width: 100%;
+        letter-spacing: 0px;
+    }
+
+    /* page2  */
+
+    .page2{
+        min-height: 35vh;
+        /* background-color: red; */
+        padding: 10px 10px;
+
+    }
+
+    .page2 video{
+        height: 100%;
+        width: 100%;
+    }
+    
+
+    /* page3  */
+
+    .page3{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .page3 .card2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding-top: 30px;
+    }
+
+    .page3 .card2 p{
+        width: 100%;
+        padding: 10px;
+        font-size: 6vw;
+        text-align: center;
+
+    }
+
+    .page3 .card2 img{
+        height:450px;
+        width: 125vw;
+        margin: 0px;
+        
+    }
+
+
+    .page3 .card3{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        margin: 5px;
+        padding: 20px;
+    }
+
+    .page3 .card3 p{
+        font-size: 5vw;
+        text-align: justify;
+    }
+
+    .page3 .card3 span{
+        padding-top: 20px;
+        font-size: 4.5vw;
+        font-weight: 400;
+        text-align: justify;
+
+    }
+
+    .page4{
+        min-height: 50vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        padding: 0px 10px;
+       
+    }
+
+    .page4 .card{
+        margin: 0px;
+    }
+
+
+    .textTage{
+        width: 70%;
+    }
+
+    .page4 .card i{
+        font-size: 7vw;
+    }
+
+    .page5 .endpage{
+        padding-top: 50px;
+    }
+
+    .page5 .endpage h1{
+        font-size: 3vw;
+    }
+
+
+
+    .page6 svg{
+        height: 10vh;
+        width: 100%;
+        opacity: 1;
+      }
   }
   
