--- a/backend/pratise backend/practice project pin/pin/views/contact.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/contact.ejs
@@ -1,50 +1,41 @@
 <% include ./partial/header.ejs %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <style>
-        .page6 svg {
-            height: 27vh;
-            width: 100%;
-            opacity: 1;
-        }
-    </style>
+    <link rel="stylesheet" href="/stylesheets/contact.css">
     <div class="main">
         <div class="page1">
             <h1 style="padding-top: 200px;">WANNA GET IN TOUCH?</h1>
         </div>
 
-        <div class="page2" style=" padding: 0px 20px;opacity: 0; ">
-            <div class="card"
-                style="display: flex; flex-direction:row;align-items:start; justify-content:space-around;">
+        <div class="page2">
+            <div class="card">
                 <div class="card1">
-                    <h5 style="padding-bottom: 50px;">WORK WITH US</h5>
-                    <p style="font-size:3vh; width: 80%;padding-bottom: 50px;">We’re on a mission to employ, empower and
+                    <h5 >WORK WITH US</h5>
+                    <p >We’re on a mission to employ, empower and
                         change the course of the lives of 80 vulnerable women each year, year on year.</p>
-                    <p style="font-size:3vh; width: 80%; padding-bottom: 100px;">We’re aiming to get there in 2023...if
+                    <p >We’re aiming to get there in 2023...if
                         you think you can help
                         us reach our goal, we warmly invite you to Join Our Table.</p>
-                    <a href="#"
-                        style="background-color: #111; padding: 15px 25px; text-decoration: none; color: aliceblue; border-radius: 30px;">VIEW
+                    <a href="#">VIEW
                         OPEN SEATS</a>
                 </div>
-                <div class="card2"
-                    style="width: 80%; display: flex;flex-direction: column;align-items: start; justify-content: center; gap: 10px;">
-                    <h5 style="padding-bottom: 50px;">GET IN TOUCH</h5>
-                    <a style="font-size: 2.5vh;text-decoration: none;border: 1px solid gray;border-radius: 30px;padding: 2px 10px; color: #111;"
+                <div class="card2">
+                    <h5>GET IN TOUCH</h5>
+                    <a
                         href="#">Lorem ipsum dolor sit amet. <i class="ri-arrow-right-line"></i></a>
-                    <a style="font-size: 2.5vh;text-decoration: none;border: 1px solid gray;border-radius: 30px;padding: 2px 10px; color: #111;"
+                    <a 
                         href="#">Lorem ipsum dolor sit amet. <i class="ri-arrow-right-line"></i></a>
-                    <a style="font-size: 2.5vh;text-decoration: none;border: 1px solid gray;border-radius: 30px;padding: 2px 10px; color: #111;"
+                    <a 
                         href="#">Lorem ipsum dolor sit amet.<i class="ri-arrow-right-line"></i></a>
-                    <a style="font-size: 2.5vh;text-decoration: none;border: 1px solid gray;border-radius: 30px;padding: 2px 10px; color: #111;"
+                    <a 
                         href="#">Lorem ipsum dolor sit amet<i class="ri-arrow-right-line"></i>.</a>
-                    <a style="font-size: 2.5vh;text-decoration: none;border: 1px solid gray;border-radius: 30px;padding: 2px 10px; color: #111;"
+                    <a 
                         href="#">Lorem ipsum dolor sit amet.<i class="ri-arrow-right-line"></i></a>
-                    <a style="font-size: 2.5vh;text-decoration: none;border: 1px solid gray;border-radius: 30px;padding: 2px 10px; color: #111;"
+                    <a 
                         href="#">Lorem ipsum dolor sit amet.<i class="ri-arrow-right-line"></i></a>
                 </div>
 
             </div>
-            <div class="image" data-scroll data-scroll-speed="1" style="width: 50vw;padding-top: 520px;">
+            <div class="image" data-scroll data-scroll-speed="1">
                 <img src="https://cdn.sanity.io/images/w8f1ak3c/production/509ca87625a9ce320e68eb0b0a62c644b4f0f634-1136x1388.png/image.png?w=640&h=782&auto=format"
                     alt="">
             </div>
