--- a/backend/pratise backend/practice project pin/pin/views/donate.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/donate.ejs
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="bar">
-            <button>back to menu</button>
+            <button class="btn">back to menu</button>
             <h5>THANK YOU FOR DONATING TO THE TWO GOOD FOUNDATION. YOU ARE HELPING TO CHANGE THE COURSE OF A WOMAN'S
                 LIFE FOR GOOD.</h4>
             <div class="card">
@@ -56,7 +56,7 @@
                 </div>
                 <input type="submit" value="Next">
             </form>
-                <h2>DONATION TOW GOOD FOUNDATION ARE TAX DEDUCTEBLE</h2>
+                <h2 class="textmessage">DONATION TOW GOOD FOUNDATION ARE TAX DEDUCTEBLE</h2>
             </div>
         </div>
     </div>
