--- a/backend/pratise backend/practice project pin/pin/views/menu.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/menu.ejs
@@ -46,13 +46,13 @@
 
             <div class="card2">
                 <h4>back to menu</h4>
-                <a class="signout" href="/logout">Sign out</a>
+                <a class="signout" id="signout" href="/logout">Sign out</a>
                 <h1>Sign in</h1>
                 <form action="/login" method="post">
                     <input type="text" name="username" id="username" placeholder="   Email address">
                     <input type="password" name="password" id="password" placeholder="    Password">
                     <input type="submit" value="Sign in" id="btn">
-                    <h5>NEED AN ACCOUNT? <a href="/register">Sign up</a> OR <a href="#">FORGOTE PASSWORD?</a></h5>
+                    <h5>NEED AN ACCOUNT? <a id="dignup" href="/register"> Sign up </a> OR <a href="#">FORGOTE PASSWORD?</a></h5>
                 </form>
             </div>
         </div>
