--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
@@ -235,3 +235,78 @@ body{
   padding: 10px 50px;
   border-radius: 30px;
 }
+
+@media (max-width:600px) {
+
+  body{
+    overflow: scroll;
+  }
+  .menu{
+    min-height: 117vh;
+    width: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column-reverse;
+  }
+
+  .menu .bar{
+    width: 100%;
+  }
+
+  .menu .bar .btn{
+    padding-top: 100px;
+    font-size:3vw;
+    padding-bottom: 20px;
+
+  }
+  .menu .bar h5{
+    font-size: 4vw;
+    width: 100%;
+    padding-bottom: 20px;
+
+  }
+  .menu .bar .card h4{
+    font-size: 2.5vw;
+    font-weight: 400;
+    /* background-color: rebeccapurple; */
+    padding-top: 30px;
+
+  }
+  .menu .bar .card .card1 h3{
+    /* background-color: red; */
+    font-size: 5vw;
+    font-weight: 500;
+
+  }
+
+  .menu .bar .card .card2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+  .menu .bar .card a{
+    /* background-color: red; */
+    font-size: 5vw;
+    font-weight: 500;
+
+  }
+  .menu .bar .textmessage{
+    /* background-color: red; */
+    font-size: 2.5vw;
+    font-weight: 500;
+    /* background-color: rebeccapurple; */
+  }
+
+  .menu .contenercardx h3{
+    font-size: 3.2vw;
+    margin-top: 50px;
+    color: gray;
+    width: 100%;
+  }
+  .menu .contenercardx li{
+    font-size: 3vw;
+  }
+  
+}
