--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/style.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/style.css
@@ -631,6 +631,11 @@ body{
   .header-nav .icon{
       margin-right: 10px;
   }
+
+
+  .header-nav .nav-part2 .icon #home{
+    margin-left: 25vw;
+  }
   
   
   
