--- a/backend/pratise backend/practice project pin/pin/views/about.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/about.ejs
@@ -34,11 +34,11 @@
                 it wasn’t long before they garnered a loyal following. ‘How can we scale from here?’, they thought.
                 That’s when the Buy 1, Give 1’ model came into play. Rob took a jar around the corner to see if a local
                 domestic violence refuge would like some lunches too and it grew organically from there.
-
+            </p><span>
                 We have since collaborated with some of the country’s best chefs to deliver the best meals we can, to
                 domestic violence shelters and people in need. It didn’t take long for our ‘Buy 1, Give 1’ idea to
                 extend to luxury gift packs and self care essentials, designed to spark a sense of self-worth at a time
-                of intense vulnerability.</p>
+                of intense vulnerability.</span>
             <p>Social employment, however, is where we create the greatest impact. Through our flagship ‘Work Work’
                 employment pathways programs, we hire the women from the shelters we serve, empowering them to
                 re-establish their self-belief and independence, while bridging the ‘love and skills’ gap in their
@@ -51,7 +51,7 @@
     <div class="page4">
         <div class="card">
             <h1>02</h1>
-            <h1>MISSION AND VALUES</h1>
+            <h1 class="textTage">MISSION AND VALUES</h1>
             <i class="ri-arrow-down-s-line"></i>
             <img src="https://images.pexels.com/photos/709689/pexels-photo-709689.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="">
@@ -60,21 +60,21 @@
         </div>
         <div class="card">
             <h1>03</h1>
-            <h1>OUR TEAM</h1>
+            <h1 class="textTage">OUR TEAM</h1>
             <i class="ri-arrow-down-s-line"></i>
             <img src="https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="">
         </div>
         <div class="card">
             <h1>04</h1>
-            <h1>RECONSILATION</h1>
+            <h1 class="textTage">RECONSILATION</h1>
             <i class="ri-arrow-down-s-line"></i>
             <img src="https://images.pexels.com/photos/1131774/pexels-photo-1131774.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="">
         </div>
         <div class="card">
             <h1>05</h1>
-            <h1>GOOD PEOPLE</h1>
+            <h1 class="textTage">GOOD PEOPLE</h1>
             <i class="ri-arrow-down-s-line"></i>
             <img src="https://images.pexels.com/photos/1767434/pexels-photo-1767434.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="">
@@ -83,7 +83,7 @@
 
     <!-- <div> -->
         <div class="page5">
-            <div class="endpage" style="padding-top: 200px;">
+            <div class="endpage">
                 <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
                 <i class="ri-arrow-right-line"></i>
             </div>
