updated payment pages in awared web app

--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
@@ -39,10 +39,12 @@ body::-webkit-scrollbar-thumb{
 .header-nav .nav-part2 a{
   z-index: 99;
   color: #fff;
+  /* background-color: rebeccapurple; */
+  
 }
 
 .header-nav .icon{
-    background-color:transparent;
+    /* background-color:transparent; */
     border-radius: 10px;
     margin-right: 30px;
     padding: 10px;
@@ -261,7 +263,48 @@ body::-webkit-scrollbar-thumb{
   }
   
 
+  .productQty{
+    font-size: 1vw; font-weight: 400;
+  }
+
+  #deleteCardBtn{
+    color: #fff;
+  }
+
+  #Qty{
+    font-size: 2vh; color: gray; margin-left: 22vw;
+  }
+
+
+  .delevery{
+    padding-left: 260px;
+  }
+
+  .card3{
+    display: flex; justify-content: space-between; align-items: start; padding: 20px 20px;
+  }
+
+  .subtotal{
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    gap: 20vw;
+  }
+
+  .card5{
+    margin-top: 200px; font-size: 3vw;width: 70%;padding-left:20px ; background-color: #111;
+  }
+
+  #buttemText{
+    font-family: 900; color: #f2eaea;
+
+  }
+  
+
+  
+
   @media (max-width:600px) {
+
     .header-nav .nav-part2 .icon{
       display: flex;
       align-items: center;
@@ -285,6 +328,7 @@ body::-webkit-scrollbar-thumb{
     flex-direction: column;
     justify-content: center;
     padding-top: 25vh;
+
 }
 
 .card-details h1{
@@ -293,6 +337,7 @@ body::-webkit-scrollbar-thumb{
     padding-bottom: 40px;
     color: #cdc9c9;
     font-weight: 100;
+    /* background-color: red; */
 
 }
 
@@ -308,6 +353,62 @@ body::-webkit-scrollbar-thumb{
 
 }
 
+
+/* new updated responsive page 12-10-2024*/
+.productQty{
+  font-size: 3.5vw;
+}
+
+#deleteCardBtn{
+  font-size: 2vw;
+}
+
+#Qty{
+  /* background-color: red; */
+  margin-left: 7vw
+}
+
+
+.card3{
+  display: flex; align-items:start; flex-direction: column;
+}
+
+.delevery{
+  padding: 0px;
+
+}
+
+#Subtext{
+  padding-top: 10px;
+}
+
+.subtotal{
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  gap: 100px;
+  /* background-color: red; */
+  margin-top: 20px;
+  width: 100%;
+}
+
+.main .card4 a{
+  text-decoration: none;
+  color:#fff;
+  float: left;
+  padding: 20px 170px;
+  margin-left: 10px;
+  border-radius: 30px;
+}
+
+.card5{
+  width: 100%;
+}
+
+#buttemText{
+  font-size: 6vw;
+  width: 100%;
+}
 
 #scroller{
     white-space:nowrap;
