--- a/backend/pratise backend/practice project pin/pin/views/shop.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/shop.ejs
@@ -62,7 +62,7 @@
                     <a href="/product/<%= product._id %>">
                       <img src="<%= product.pImage %>" alt="">
                     </a>
-                    <h5><%= product.producttitle %></h5>
+                    <h5 class="nameText"><%= product.producttitle %></h5>
                     <h6>$<%= product.pPrice %></h6>
                   </div>
                 <% }) %>
@@ -74,7 +74,7 @@
         <!-- footer page -->
         <div class="page5">
             <div class="endpage">
-                <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
+                <h1 class="enterText">ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
                 <i class="ri-arrow-right-line"></i>
             </div>
         </div>
