--- a/backend/pratise backend/practice project pin/pin/views/checkout.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/checkout.ejs
@@ -1,20 +1,9 @@
-<style>
-    h1 {
-        text-transform: uppercase;
-    }
 
-
-    #UpdateBtn:hover{
-        background-color: rgb(17, 175, 17);
-        color: yellow;
-    }
-</style>
-
-<nav style="display: flex; align-items: center;justify-content: space-between;">
+<link rel="stylesheet" href="stylesheets/checkout.css">
+<nav class="navbar">
     <div class="logo">
-        <a style="text-decoration: none; color: #111;" href="/"><svg id="svg1" class="logo" width="106" height="83"
-                viewBox="0 0 106 83" fill="none" xmlns="http://www.w3.org/2000/svg"
-                style="transform: translate(0px, 0px);">
+        <a id="SvgLink" href="/"><svg id="svg1" class="logo" width="106" height="83" viewBox="0 0 106 83" fill="none"
+                xmlns="http://www.w3.org/2000/svg" style="transform: translate(0px, 0px);">
                 <g clip-path="url(#clip0_2228_162)">
                     <path d="M5.50062 6.4473H0V0.557617H17.7807V6.4473H12.2464V25.4842H5.50062V6.4473Z"
                         fill="currentColor">
@@ -57,83 +46,77 @@
     </div>
     <h4>CONTINUE SHOPPING</h4>
 </nav>
-<h1 style="font-size: 3vw; font-weight: 800;">CHECKOUT</h1>
-<div class="page2" style="display: flex;align-items: start;justify-content: space-between;">
-    <div class="card" style="width: 60%;">
-        <h1 style="font-size: 2vw; text-transform: capitalize; border-top: 1px solid gray; text-transform: uppercase;">
+<h1 class="chekout">CHECKOUT</h1>
+<div class="page2">
+    <div class="card">
+        <h1 class="cust">
             customers</h1>
-        <h1 style="font-weight: 400; font-size: 1vw; text-transform:lowercase;margin-left: 20px;">
+        <h1 class="custEmail">
             <%= user.email %>
         </h1>
-        <!-- <div class="card">
-            <p>Email</p>
-            <p><input style="width: 60%;height: 40px; border: none;border-bottom: 1px solid gray;" type="email"><a style="text-decoration: none; color: #fff;background-color: #111;margin-left: 20px;padding: 10px 100px;border-radius: 30px;" href="#">CONTINUE</a></p>
-            <p><input type="checkbox">Subscribe to receive updates on the incredible impact you've made with your purchase.</p>
-            <h3 style="font-weight: 300;">Already have an account? Sign in now</h3>
-        </div> -->
         <div>
-            <h1 style="border-top: 1px solid gray;padding-top: 30px;font-size: 2.5vw;">Shipping</h1>
             <div>
-                <h1>Shipping Address</h1>
+                <h1 class="shipAdd">Shipping Address</h1>
                 <div class="card">
                     <div class="card2">
-                        <div class="container" >
-                    
+                        <div class="container">
+
                             <!-- Add more HTML as needed -->
-                    
-                            <form style="display: flex; align-items: start;justify-content: space-around; flex-direction: column; gap: 30px; margin-left: 20px; font-size: 1vw;"  action="/add-to-cart2" method="POST">
+
+                            <form class="formContainer" action="/add-to-cart2" method="POST">
 
                                 <div>
-                                <label for="address">Address:</label>
-                                <input style="font-size: 0.9vw; border: none;border-bottom: 1px solid #111; " type="text" id="address" name="address" value="<%= user.address %>" required>
-                                
-                                <label style="margin-left: 20px;" for="state">State:</label>
-                                <input style="font-size: 0.9vw;  border: none;border-bottom: 1px solid #111; width: 20%" type="text" id="state" name="state" value="<%= user.state %>" required>
+                                    <label for="address">Address:</label>
+                                    <input type="text" id="address" name="address" value="<%= user.address %>" required>
 
-                                <label style="margin-left: 20px;"   for="country">Country:</label>
-                                <input style="font-size:0.9vw;  border: none;border-bottom: 1px solid #111; width: 10%;" type="text" id="country" name="country" value="<%= user.country %>" required>
-                                
-                            </div>
-                            <div>
-                                
-                                <label for="postcode">Pin code:</label>
-                                <input style="font-size: 0.9vw;  border: none;border-bottom: 1px solid #111; width: 12%;" type="text" id="postcode" name="postcode" value="<%= user.pastcode %>" required>
-                                
-                                <label style="margin-left: 20px;"  for="phone_number">Phone Number:</label>
-                                <input style="font-size: 0.9vw;  border: none;border-bottom: 1px solid #111; width: 20%;" type="text" id="phone_number" name="phone_number" value="<%= user.phone_number %>" required>
-                            </div>
-                                <button id="UpdateBtn" style="padding: 7px 20px; border-radius: 20px;" type="submit">Update Address</button>
+                                    <label style="margin-left: 20px;" for="state">State:</label>
+                                    <input id="State" type="text" id="state" name="state" value="<%= user.state %>"
+                                        required>
+
+                                    <label style="margin-left: 20px;" for="country">Country:</label>
+                                    <input id="countery" type="text" id="country" name="country"
+                                        value="<%= user.country %>" required>
+
+                                </div>
+                                <div>
+
+                                    <label for="postcode">Pin code:</label>
+                                    <input id="pincode" type="text" id="postcode" name="postcode"
+                                        value="<%= user.pastcode %>" required>
+
+                                    <label style="margin-left: 20px;" for="phone_number">Phone Number:</label>
+                                    <input id="mobile" type="text" id="phone_number" name="phone_number"
+                                        value="<%= user.phone_number %>" required>
+                                </div>
+                                <button id="UpdateBtn" type="submit">Update Address</button>
                             </form>
-                    
+
                         </div>
-                    
+
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- <h1 style="border-top: 1px solid gray;padding-top: 30px;font-size: 2.5vw;">Billing</h1> -->
-        <h1 style="border-top: 1px solid gray;padding-top: 30px;font-size: 2.5vw;"><a style="text-decoration: none; background-color: orange; padding: 2px 10px; border-radius: 10px; color:#111; font-size: 2vw;" href="/payment">CONTINUE Payment</a></h1>
+        <h1 id="paymentbtn"><a id="paymentbtnLink" href="/payment">CONTINUE Payment</a></h1>
 
 
     </div>
 
-    <div class="card2"
-        style="border-top: 1px solid gray; display: flex; align-items: center;justify-content: space-between; flex-direction: column;">
-        <h1 style="font-size: 1.6vw;">ORDER SUMMARY <span
-                style="padding-left: 200px; font-size: 1vw;font-weight: 400;">Edit card</span></h1>
+    <div class="card2">
+        <h1 id="orderSummery">ORDER SUMMARY <span id="editCard">Edit card</span></h1>
         <% if (cart && cart.products.length> 0) { %>
             <% let totalAmount=0; %> <!-- Initialize total amount -->
                 <% cart.products.forEach(cartItem=> { %>
-                    <div class="card" style="display: flex; align-items:center;justify-content:center;width: 90%;">
-                        <img height="70px" src="<%= cartItem.productId.pImage %>" alt="">
-                        <h1 style="font-size: 1vw; font-weight: 400; width: 90%;"><span>
+                    <div id="productCard" class="card">
+                        <img src="<%= cartItem.productId.pImage %>" alt="">
+                        <h1 id="qty"><span>
                                 <%= cartItem.quantity %>x
                             </span>
                             <%= cartItem.productId.producttitle %>
                         </h1>
-                        <h1 style="font-size: 1vw; font-weight: 600;padding-bottom: 50px;">$<%=
-                                cartItem.productId.pPrice %>
+                        <h1 id="price">$<%= cartItem.productId.pPrice %>
                         </h1>
                     </div>
 
@@ -141,30 +124,28 @@
                         <!-- Calculate total amount -->
                         <!-- Display total amount -->
                         <% }) %>
-                            <div class="card2"
-                                style="display: flex;align-items: center;justify-content: space-between; border-top: 1px solid gray;width: 90%;">
+                            <div class="card2">
                                 <div class="card">
-                                    <h1 style="font-size: 1vw;font-weight: 600;">Subtotal</h1>
-                                    <h1 style="font-size: 1vw;font-weight: 400;">Shipping</h1>
-                                    <h1 style="font-size: 1vw;font-weight: 400;">Coupon/Gift Certificate</h1>
+                                    <h1 id="items">Subtotal</h1>
+                                    <h1 id="items">Shipping</h1>
+                                    <h1 id="items">Coupon/Gift Certificate</h1>
                                 </div>
-                                <h1 style="font-size: 1vw;font-weight: 600;">$<%= totalAmount.toFixed(2) %>
+                                <h1 id="amount">$<%= totalAmount.toFixed(2) %>
                                 </h1>
                             </div>
-                            <div class="card3"
-                                style="display: flex; align-items: center; justify-content: space-between; border-top: 1px solid gray;padding-bottom: 50px; width: 90%;">
-                                <h1 style="font-size: 1vw;font-weight: 400;">Total (AUD)</h1>
-                                <h1 style="font-size: 1vw;font-weight: 400;">$<%= totalAmount.toFixed(2) %>
+                            <div  id="card3item" class="card3">
+                                <h1>Total (AUD)</h1>
+                                <h1>$<%= totalAmount.toFixed(2) %>
                                 </h1>
                             </div>
-                            <div class="card4"
-                                style="display: flex; align-items: center; justify-content: space-between; border-top: 1px solid gray;width: 90%;">
-                                <div class="card">
-                                    <h1 style="font-size: 1vw;font-weight: 400;">Tax Included in Total:</h1>
-                                    <h1 style="font-size: 1vw;font-weight: 400;">GST</h1>
+                            <div class="card4">
+                                <div id="card4item" class="card">
+                                    <h1>Tax Included in Total:</h1>
+                                    <h1>GST</h1>
                                 </div>
-                                <h1 style="font-size: 1vw;font-weight: 400;">$00.00</h1>
+                                <h1 id="gst">$00.00</h1>
                             </div>
+                            <h1 id="paymentbtn2"><a id="paymentbtnLink" href="/payment">CONTINUE Payment</a></h1>
 
                             <% } else { %>
                                 <p>Your cart is empty.</p>
