--- a/backend/pratise backend/practice project pin/pin/views/orderConfirmation.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/orderConfirmation.ejs
@@ -1,34 +1,96 @@
 <% include ./partial/header.ejs %>
-<a style="position:absolute;z-index: 999; text-decoration: none; color:rgb(114, 26, 26); margin-top: 150px; margin-left: 20px; font-size: 1vw; " href="/OwnOrder"><i class="fa-solid fa-arrow-left"></i> OrderPage</a>
+<style>
+    .backToOrder{
+        position:absolute;z-index: 999; text-decoration: none; color:rgb(114, 26, 26); margin-top: 150px; margin-left: 20px; font-size: 1vw; 
+
+    }
+
+    .card{
+        background-color:cadetblue;margin:  20px 0px; padding: 0px 20px;margin: 0px 13%;position: relative; z-index: 999;min-height: 60vh; margin-top: 200px;border-radius: 10px;
+    }
+
+    .AdAndOrder{
+        display: flex; align-items: center;justify-content: space-between; gap: 100px;padding: 30px 0px;
+    }
+
+    .AdAndOrderText{
+        font-size: 1.2vw;
+
+    }
+
+    .ListOfItem{
+        display: flex; align-items:center; justify-content:space-around; flex-direction: row; gap: 10px; background-color:ghostwhite; margin: 5px 0px;border-radius: 10px;height: 100px;
+    }
+
+    .productName{
+        width: 30%; font-size: 1vw; font-weight: 400; text-transform: capitalize;
+    }
+
+    .paymentCard{
+        display: flex; align-items: center;justify-content:space-between; padding-top: 100px;
+
+    }
+
+    .paymentCardText{
+        font-size: 1vw;
+
+    }
+
+    @media (max-width:600px) {
+        .backToOrder{
+            font-size: 3vw;
+        }
+
+        .card{
+            margin: 25vh 7%;
+        }
+        .AdAndOrderText{
+            font-size: 2.3vw;
+        }
+
+        .ListOfItem{
+            margin-top: 3vh;
+        }
+        .productName{
+            font-size: 3vw;
+        }
+
+        .paymentCardText{
+            font-size: 3vw;
+        }
+        
+    }
+    
+
+    
+</style>
+<a class="backToOrder" href="/OwnOrder"><i class="fa-solid fa-arrow-left"></i> OrderPage</a>
 <div>
     
-    <div style="background-color:cadetblue;margin:  20px 0px; padding: 0px 20px;margin: 0px 13%;position: relative; z-index: 999;min-height: 60vh; margin-top: 200px;border-radius: 10px;">
-        
+    <div class="card">
         <h1 style="font-size: 3vh; padding-top: 10px;">Order Details</h1>
-        <div style="display: flex; align-items: center;justify-content: space-between; gap: 100px;padding: 30px 0px;">
-            <p style="font-size: 1.2vw;">Address: <%= getproduct.address %>
+        <div class="AdAndOrder">
+            <p class="AdAndOrderText" >Address: <%= getproduct.address %>
             </p>
-            <p style="font-size: 1vw;">OrderId: <%= getproduct.orderId %>
+            <p class="AdAndOrderText">OrderId: <%= getproduct.orderId %>
             </p>
         </div>
         <h3>Products list</h3>
         <ul>
             <% getproduct.products.forEach((product, index)=> { %>
                 <% if (product.productName) { %>
-                  <li style="display: flex; align-items:center; justify-content:space-around; flex-direction: row; gap: 10px; background-color:ghostwhite; margin: 5px 0px;border-radius: 10px;height: 100px;">
-        
-                    <h5 style="width: 30%; font-size: 1vw; font-weight: 400; text-transform: capitalize;"><%= product.productName %></h5>
+                  <li class="ListOfItem">
+                    <h5 class="productName"><%= product.productName %></h5>
                     <h5 style="font-weight: 400;"> Price: $<%= product.price %></h5>
                     <h5 style="font-weight: 400; font-size: 2vh;">Qty: <%= product.quantity %></h5>
-                      
                   </li>
                   <% } %>
                   <% }); %>
         </ul>
-        <div style="display: flex; align-items: center;justify-content:space-between; padding-top: 100px;">
-            <p style="font-size: 1vw;">Payment Stauts: <%= getproduct.status %>
+        <div class="paymentCard">
+            <p class="paymentCardText">Payment Stauts: <%= getproduct.status %>
             </p>
-            <p style="font-size: 1.2vw;">Total Invoice <%= getproduct.amount %>.00
+            <p class="paymentCardText">Total Invoice <%= getproduct.amount %>.00
             </p>
         </div>
         
