--- a/backend/pratise backend/practice project pin/pin/views/ownOrderList.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/ownOrderList.ejs
@@ -1,47 +1,137 @@
 <% include ./partial/header.ejs %>
-<div style=" margin-top: 150px; overflow-y: hidden;">
-  <% orders.forEach(order=> { %>
-     <a style="color: #111; text-decoration: none;" href="/OwnOrder/<%= order._id %>"><div style="background-color:cadetblue; padding: 0px 20px;margin: 20px 13%; border-radius: 20px;">
-      <h1 style="font-size: 3vh; padding-top: 10px;">Order Details</h1>
-     
+  <style>
 
-    <h3>Products</h3>
-    <ul>
-      <% order.products.forEach((product, index)=> { %>
-        <% if (product.productName) { %>
-          <li style="display: flex; align-items:center; justify-content:space-around; flex-direction: row; gap: 10px; background-color:ghostwhite; margin: 5px 0px;border-radius: 10px; padding: 15px 0px;">
+    .main{
+      margin-top: 160px;
 
-            <h5 style="width: 30%; font-size: 1vw; font-weight: 400; text-transform: capitalize;"><%= product.productName %></h5>
-            <h5 style="font-weight: 400;"> Price: $<%= product.price %></h5>
-            <h5 style="font-weight: 400; font-size: 2vh;">Qty: <%= product.quantity %></h5>
-              
-          </li>
-          <% } %>
-            <!-- <% if (product.paymentId) { %>
-              <li>
-                <strong>Amount:</strong> $<%= product.amount %><br>
-                  <strong>Payment ID:</strong>
-                  <%= product.paymentId %><br>
-                    <strong>Order ID:</strong>
-                    <%= product.orderId %><br>
-                      <strong>Status:</strong>
-                      <%= product.status %><br>
-                        <strong>Created At:</strong>
-                        <%= new Date(product.createdAt).toLocaleString() %><br>
-                          <strong>Updated At:</strong>
-                          <%= new Date(product.updatedAt).toLocaleString() %>
-              </li>
-              <% } %> -->
-                <% }); %>
-    </ul>
+    }
 
-    <div style="display: flex; align-items: center;justify-content:space-between; padding-bottom: 10px;">
-      <p style="font-size: 1vw;">Payment Stauts: <%= order.status %>
-      </p>
-      <p style="font-size: 1.2vw;">Total Invoice <%= order.amount %>.00
-      </p>
-    </div>
-  </div></a>
-    <% }); %>
+
+    .main .card {
+      background-color: cadetblue;
+      padding: 0px 20px;
+      margin: 20px 13%;
+      border-radius: 20px;
+    }
+
+    .main .orderDetails{
+      font-size: 3vh;
+      padding-top: 10px;
+
+    }
+
+    .main .card .productList{
+      width: 100%;
+    }
+
+    .main .card .listItem {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      flex-direction: row;
+      gap: 10px;
+      background-color: ghostwhite;
+      margin: 5px 0px;
+      border-radius: 10px;
+      padding: 15px 0px;
+
+    }
+
+
+    .main .card .productName {
+      font-size: 1vw;
+      width: 30%;
+      font-weight: 400;
+      text-transform: capitalize;
+    }
+
+    .paymentCard{
+      display: flex; align-items: center;justify-content:space-between; padding-bottom: 10px;
+
+    }
+
+
+    .orderStatus {
+      font-size: 1vw;
+
+    }
+
+    .orderAmout {
+      font-size: 1.2vw;
+    }
+
+
+
+    @media (max-width:600px) {
+
+      .main .card {
+      padding: 0px 20px;
+      margin: 20px 7%;
+      border-radius: 20px;
+    }
+
+      .main .card .orderDetails {
+        padding-bottom: 20px;
+      }
+
+      .main .card .productName {
+        font-size: 3vw;
+        width: 70%;
+      }
+
+      .paymentCard{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 50px;
+        padding-top: 20px;
+      }
+      .orderStatus {
+        font-size: 3vw;
+
+      }
+
+      .orderAmout {
+        font-size: 3vw;
+      }
+
+
+    }
+  </style>
+  <div class="main">
+    <% orders.forEach(order=> { %>
+      <a style="color: #111; text-decoration: none;" href="/OwnOrder/<%= order._id %>">
+        <div class="card">
+          <h1 class="orderDetails">Order Details</h1>
+
+
+          <h3>Products</h3>
+          <ul class="productList">
+            <% order.products.forEach((product, index)=> { %>
+              <% if (product.productName) { %>
+                <li class="listItem">
+
+                  <h5 class="productName">
+                    <%= product.productName %>
+                  </h5>
+                  <h5 style="font-weight: 400;"> Price: $<%= product.price %>
+                  </h5>
+                  <h5 style="font-weight: 400; font-size: 2vh;">Qty: <%= product.quantity %>
+                  </h5>
+
+                </li>
+                <% } %>
+                  <% }); %>
+          </ul>
+
+          <div class="paymentCard">
+            <p class="orderStatus">Payment Stauts: <%= order.status %>
+            </p>
+            <p class="orderAmout">Total Invoice <%= order.amount %>.00
+            </p>
+          </div>
+        </div>
+      </a>
+      <% }); %>
   </div>
-    <% include ./partial/footer.ejs %>
+  <% include ./partial/footer.ejs %>
